# OpenDarts

./: .gitignore  CHANGELOG.md  DART_STABILIZATION_GUIDE.md  README.md  docker-compose.yaml  docker-compose.yml  pom.xml  pyproject.toml
.github/workflows/: test-and-release.yml  test.yml
app/: app.json  eas.json  package-lock.json  package.json
app/OpenDarts/: App.tsx  app.json  package-lock.json  package.json
app/app/: _layout.tsx
app/demo/: image_scorer_demo.py  visualizer_demo.py  yolo_script.py
autoscore/: __init__.py  main.py
autoscore-server/: .dockerignore  Dockerfile  pyproject.toml
autoscore-server/autoscore/: main.py
autoscore-server/autoscore/handler/: __init__.py  pipeline_detection_handler.py
autoscore-server/autoscore/model/: request.py  response.py
autoscore-server/autoscore/util/: file_util.py
autoscore-server/autoscore/websocket/: __init__.py  message_router.py
autoscore-server/detector/autoscore-server/app/backend/.github/workflows/: ci.yml
autoscore-server/detector/autoscore-server/app/backend/autoscore-package/: README.md
autoscore-server/detector/autoscore-server/app/backend/autoscore-package/autoscore/handler/: base_handler.py
autoscore-server/detector/autoscore-server/app/backend/autoscore-server/: CHANGELOG.md  README.md  pyproject.toml
autoscore-server/detector/autoscore-server/app/backend/autoscore-server/autoscore/util/: __init__.py
autoscore-server/detector/autoscore-server/app/backend/autoscore-server/autoscore/websocket/: dart_websocket_server.py
autoscore-server/detector/autoscore-server/app/backend/autoscore-server/detector/script/: image_scorer_demo.py  yolo_script.py
autoscore-server/detector/autoscore-server/app/backend/autoscore-server/detector/service/parser/: yolo_result_parser.py
autoscore-server/detector/autoscore-server/app/backend/autoscore-server/detector/yolo/: dartboard_cropper.py
autoscore-server/detector/autoscore-server/app/backend/autoscore-server/tests/: test_server_it.py
autoscore-server/detector/autoscore-server/app/backend/backend/: pom.xml
autoscore-server/detector/autoscore-server/app/backend/backend/core/src/main/kotlin/io/github/dmall/opendarts/auth/util/: JwtUtil.kt
autoscore-server/detector/autoscore-server/app/backend/backend/core/src/main/kotlin/io/github/dmall/opendarts/game/autoscore/service/: AutoScoreBaseService.kt  AutoScoreStabilizer.kt
autoscore-server/detector/entrypoint/: image_score_pipeline.py
autoscore-server/detector/model/: configuration.py  image_models.py
autoscore-server/detector/service/: dart_image_scoring_service.py
autoscore-server/detector/service/calibration/: board_calibration_service.py  calibration_matrix_calculator.py
autoscore-server/detector/service/parser/: yolo_result_parser.py
autoscore-server/detector/service/parser/calibration/: calibration_point_parser_service.py
autoscore-server/detector/service/parser/dart/: dart_parser_service.py
autoscore-server/detector/service/scoring/: dart_scoring_service.py
autoscore-server/detector/util/: file_utils.py
autoscore-server/detector/yolo/: dart_detector.py  dartboard_cropper.py
autoscore/handler/: base_handler.py  calibration_handler.py  ping_handler.py  pipeline_detection_handler.py  scoring_handler.py
autoscore/model/: __init__.py  models.py  request.py  response.py
autoscore/util/: file_util.py
autoscore/websocket/: connection_manager.py  dart_websocket_server.py  message_router.py
backend/: .dockerignore  Dockerfile  README.md
backend-history/: docker-compose.yml
backend/core/: pom.xml
backend/demo/: image_scorer_demo.py  visualizer_demo.py  yolo_script.py
core/: pom.xml
dart_detection/demo/: visualizer_demo.py  yolo_script.py
detector/demo/: __init__.py  dart_detection.py  demo_calibration_viz.py  yolo_inference.py
detector/entrypoint/: calibration_visualizer.py  dart_image_scorer.py  dart_image_scorer_pipeline.py  image_score_pipeline.py
detector/geometry/: board.py
detector/infrastructure/: __init__.py  yolo_dartboard_image_cropper.py  yolo_model_darts_processor.py
detector/model/: configuration.py  detection_models.py  detection_result_code.py  exception.py  yolo_dart_class_mapping.py
detector/models/: detection_models.py  geometry_models.py
detector/script/: image_scorer_demo.py  visualizer_demo.py  yolo_script.py
detector/service/: calibration_matrix_calculator.py  calibration_service.py  coordinate_service.py  coordinate_transformer.py  dart_image_scoring_service.py  dart_point_score_calculator.py  detection_service.py  image_preprocessor.py  scoring_service.py  transformation_service.py
detector/services/: calibration_service.py  coordinate_service.py  detection_service.py  image_preprocessor.py  scoring_service.py
detector/util/: file_utils.py
detector/utils/: file_utils.py
detector/yolo/: __init__.py  dart_detector.py  dartboard_cropper.py
src/: dart_scorer.py  demo_calibration_viz.py  inference.py  main.py
src/core/: dart_detector.py  detectory.py  scorer.py  (+2 more)
tests/: sanity_test.py  server_test_it.py  test_server_it.py  websocket_client_test.py
(+298 files in other folders)
